force-app/main/default/objects/Fornecedor__c/Fornecedor__c.object-meta.xml
<CustomObject>
    <description>sObject para view, create e edit de fornecedores.</description>
    <label>Fornecedor</label>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>Nome de Fornecedor</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fornecedores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>