force-app/main/default/objects/Fornecedor__c/fields/Nome__c.field-meta.xml
<CustomField>
    <fullName>Nome__c</fullName>
    <description>Nome do fornecedor</description>
    <label>Nome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>