force-app/main/default/objects/Fornecedor__c/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <label>Produto</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Escolha uma ou mais opções</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>