force-app/main/default/objects/Fornecedor__c/fields/Telefone__c.field-meta.xml
<CustomField>
    <fullName>Telefone__c</fullName>
    <description>Telefone do fornecedor</description>
    <label>Telefone</label>
    <type>Phone</type>
</CustomField>